--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ProductServiceNovember24
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/product_service_november
+spring.datasource.username = root
+spring.datasource.password = Sachin2011@m
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=update
+server.port =8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
